infrastructure/k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-demo-app
  namespace: devsu-demo-staging
  labels:
    app: devsu-demo
    environment: staging
    component: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devsu-demo
      environment: staging
  template:
    metadata:
      labels:
        app: devsu-demo
        environment: staging
        component: app
    spec:
      containers:
      - name: devsu-demo-app
        image: khakharis/devsu-demo:3a95cb0b02be1ef4405c0930ba10106b2ae9922d
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
