infrastructure/k8s/staging/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: devsu-demo-staging
  labels:
    app: mariadb
    environment: staging
    component: database
spec:
  selector:
    app: mariadb
    environment: staging
  ports:
  - port: 3306
    targetPort: 3306
    name: mysql
  type: ClusterIP
