infrastructure/k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-demo-ingress
  namespace: devsu-demo-staging
  labels:
    app: devsu-demo
    environment: staging
    component: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: devsu-demo-staging.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devsu-demo-service
            port:
              number: 80
